Update links in CSD

--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -149,7 +149,7 @@ We referred to the published statistics of urban population (% of total populati
 
 The QLFS of all years codes industry based on the [Standard Industrial Classification of All Economic Activities, Fifth Edition (SIC 5)](http://www.statssa.gov.za/additional_services/sic/contents.htm), which is based upon the third revision of the International Standard Industrial Classification of all Economic Activities (ISIC Rev. 3) published in 1990.
 
-Regarding occupational classification, all QLFS years code occupation based on [South African Standard Classification of Occupations published in 2003 (SASCO 2003)](http://www.statssa.gov.za/classifications/codelists/SASCO_2003.pdf), which is based on the United Nations' International Standard Classification of Occupations (ISCO-88). The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/Country%20Survey%20Details/ZAF/QLFS/Correspondence_National_International_Classifications.md).
+Regarding occupational classification, all QLFS years code occupation based on [South African Standard Classification of Occupations published in 2003 (SASCO 2003)](http://www.statssa.gov.za/classifications/codelists/SASCO_2003.pdf), which is based on the United Nations' International Standard Classification of Occupations (ISCO-88). The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/ZAF/QLFS/Correspondence_National_International_Classifications.md).
 
 ### Assembling annual data using QLFS and LMDSA
 
