--- a/Support/C - Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/C - Templates/1. Introduction to [Survey Acronym].md
@@ -15,7 +15,7 @@ The Indian Employment and Unemployment Survey (EUS) is the Indian Labour Force S
 
 ## What does the [CCC] [survey Acronym] cover?
 
-Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Global/unique_hh_ind_obs.R) Example:
+Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Z%20-%20Other%20Tools/Global/unique_hh_ind_obs.R) Example:
 
 The Indian EUS is a labour force survey collecting information on demographic details (age, sex, location), education (both academic and vocational), labour market activities over the past 12 months, as well as time use and activities over the previous 7 days. Some years contain further information on consumption expenditure. The years and sample size of EUS harmonized for GLD are:
 
@@ -29,7 +29,7 @@ The Indian EUS is a labour force survey collecting information on demographic de
 
 Paragraph on the source of the data and the documentation. If publicly available for download refer to this explicitly. If the data can only be circulated within the World Bank, make a note of this. If the data, can only be used after filling out a special data request form explain so. Say to get in touch with Jobs Group (cannot provide an email address for now, need to create one) – only WB staff should get in touch, though. Example:
 
-The microdata are free and publicly available on the Ministry of Statistics and Programme Implementation’s (MOSPI) [National Data Archive of microdata]( http://microdata.gov.in/nada43/index.php/catalog/EUE). The website also provides all necessary documentation.
+The microdata are free and publicly available on the Ministry of Statistics and Programme Implementation’s (MOSPI) [National Data Archive of microdata](http://microdata.gov.in/nada43/index.php/catalog/EUE). The website also provides all necessary documentation.
 
 ## What is the sampling procedure?
 
@@ -61,7 +61,7 @@ These individual additional points should be about one to two paragraphs long. I
 
 ### ISIC mapping example (MEX)
 
-The Mexican INEGI codes industry in the ENE based on the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4) to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+The Mexican INEGI codes industry in the ENE based on the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4) to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../B%20-%20Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
 
 ### Other Documentation Files 
 If we want to link to other documentation files in the same directory, the issue is that we cannot use the permalink web address because eventually the document will change branches, and the link will change. However, GitHub have allowed for [this solution](https://github.blog/2013-01-31-relative-links-in-markup-files/), which involves relative linking. As long as the Introduction and linked files are in the same directory, simply follow the example below and the relative link will always link to the file no matter what branch the files are on: 
