Update links, text CSD
* Update PHL Industry Classification Details

 Update links to match new directory structure

--- a/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -46,12 +46,12 @@ The ENOE uses a stratified two-stage design. The introductory section of ENOE pr
 
 Image 1. Steps to find the information in the webpage
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro.png)
+![](utilities/ENOE_intro.png)
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro2.png)
+![](utilities/ENOE_intro2.png)
 <br></br>
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro3.png)
+![](utilities/ENOE_intro3.png)
 <br></br>
 Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
 
@@ -82,7 +82,7 @@ version.
 
 Figure 1. Type of questionnaire used in ENOE
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOEversions.png)
+![](utilities/ENOEversions.png)
 <br></br>
 Note.- Image taken from ["Conociendo la base de datos de la ENOE"](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/con_basedatos_proy2010.pdf) by INEGI
 
