--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -16,21 +16,13 @@
 
 ## What is the PHL LFS?
 
-The Philippines Labor Force Survey (LFS) is a [Labor Force
-Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by
-the [Philippine Statistics Authority](https://psa.gov.ph/) that is
-usually consists of four rounds per year, updated with a new
-questionnaire design in 1987 (PSA Technical Note). Our analysis begins
-in 1997.
+The Philippines Labor Force Survey (LFS) is a [Labor Force Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by the [Philippine Statistics Authority](https://psa.gov.ph/) that is usually consists of four rounds per year, updated with a new questionnaire design in 1987 (PSA Technical Note). Our analysis begins in 1997.
 
 ## What does the PHL LFS cover?
 
-The following table presents unique Household and Individual
-observations in the final GLD dataset after processing. Most raw survey
-files did not provide a unique household or individual ID, so these were
-constructed. More information below in “Other Noteworthy Aspects”.
+The following table presents unique Household and Individual observations in the final GLD dataset after processing. Most raw survey files did not provide a unique household or individual ID, so these were constructed. More information below in “Other Noteworthy Aspects”.
 
-| Year | No. of Households | No. of Individuals |
+| Year | No. of Households | No. of Individuals |
 |:-----|:------------------|:-------------------|
 | 1997 | 158,582           | 823776             |
 | 1998 | 39,837            | 207,663            |
@@ -58,36 +50,19 @@ constructed. More information below in “Other Noteworthy Aspects”.
 
 ## Where can the data be found?
 
-The data for the GLD analysis originates from internal World Bank
-sources, but many of the survey data are listed publicly on either the
-Philippine Statistics Authority’s [Data
-Archive](http://psada.psa.gov.ph/index.php/catalog/LFS) or on the
-International Labour Organization’s
-[repository](https://www.ilo.org/surveyLib/index.php/catalog/LFS#_r=&collection=&country=171&dtype=&from=1975&page=1&ps=30&sid=&sk=&sort_by=nation&sort_order=&to=2019&topic=&view=s&vk=),
-subject to agreements and terms on each of these sites. Documentation
-can also be found at each of these two locations.
+The data for the GLD analysis originates from internal World Bank sources, but many of the survey data are listed publicly on either the Philippine Statistics Authority’s [Data Archive](http://psada.psa.gov.ph/index.php/catalog/LFS) or on the International Labour Organization’s [repository](https://www.ilo.org/surveyLib/index.php/catalog/LFS#_r=&collection=&country=171&dtype=&from=1975&page=1&ps=30&sid=&sk=&sort_by=nation&sort_order=&to=2019&topic=&view=s&vk=), subject to agreements and terms on each of these sites. Documentation can also be found at each of these two locations.
 
 ## What is the sampling procedure?
 
-A thorough explanation of the general sampling scheme is available from
-the [Philippine Statistics
-Authority](https://psa.gov.ph/content/technical-notes-labor-force-survey-lfs)
-and an abbreviated version is made available here from the PSA:
+A thorough explanation of the general sampling scheme is available from the [Philippine Statistics Authority](https://psa.gov.ph/content/technical-notes-labor-force-survey-lfs) and an abbreviated version is made available here from the PSA:
 
--   The Provinces and High Density Urban Cities are used as the sampling
-    domains. The 2013 revision has 117 domains, which consists of 81
-    provinces and 36 urban cities and other areas.
+-   The Provinces and High Density Urban Cities are used as the sampling domains. The 2013 revision has 117 domains, which consists of 81 provinces and 36 urban cities and other areas.
 
--   The PSA designs a Master Sample that further subdivides each
-    sampling domain into consists of non-overlapping, randomly-sampled
-    sets of geographic areas called Primary Sampling Units, which
-    contain about 100-400 households.
+-   The PSA designs a Master Sample that further subdivides each sampling domain into consists of non-overlapping, randomly-sampled sets of geographic areas called Primary Sampling Units, which     contain about 100-400 households.
 
 ## What is the significance level?
 
-The primary significance level is the Province or first administrative
-disaggregation,
-[see](https://psa.gov.ph/sites/default/files/ISHB%20-%20Labor%20Force%20Series%20No.161%20July%202014.pdf).
+The primary significance level is the Province or first administrative disaggregation, [see](https://psa.gov.ph/sites/default/files/ISHB%20-%20Labor%20Force%20Series%20No.161%20July%202014.pdf).
 
 ## Other Documentation Files
 
