--- a/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -52,11 +52,11 @@ Sample sizes and expanded population (that is the total population estimated usi
 
 The table below shows the difference between published data and the data in the GLD harmonization. Note that MOSPI reports expanded population only to the nearest hundred, rounding by the next number (i.e., 427,149 would be rounded to 1, not to 427,100, not 427,200).
 
-| Unit			| GLD Data	| Published Data	|
-| :------:			| :------:		| :------:			|
-| Sample size – Rural	| 509,778	| 509,779		|
+| Unit			        | GLD Data	    | Published Data	|
+| :------:			    | :------:		| :------:			|
+| Sample size – Rural	| 509,778	    | 509,779		|
 |Expanded pop – Rural	| 686,881,988	| 686,880,900		|
-|Sample size - Urban	| 309,233	| 309,234		|
+|Sample size - Urban	| 309,233	    | 309,234		|
 |Expanded pop – Urban	| 234,107,489	| 234,107,000		|
 
 The differences are a single individual in each of the rural and the urban sample, in the hundreds in the case of expanded population - for a country of about a billion people at the time (1999). The harmonization team has tried to identify and correct this difference but failed to locate it. The differences are believed to be too small to impact the validity of any conclusions drawn from the data in a significant way. The inability to match precisely published numbers is nonetheless to note.
@@ -65,7 +65,7 @@ The differences are a single individual in each of the rural and the urban sampl
 
 The EUS was followed by the Periodic Labour Force Survey, whose first implementation took place in 2017. The questionnaires are nearly identical and cover also 12-month and 7-day labour market recall details (i.e., the definitions described in the next subsection still hold). Moreover, the design is also a two-stage stratified sample, with census villages and urban blocks working as PSUs and households as SSUs.
 The main difference, however, lies in the stratification at the second stage. While EUS stratified households by relative income, PLFS stratifies them by the “*number of members in the households having level of general education as secondary (10th standard) or above*”.
-The report on the first PLFS from 2017 compares the sampling methodologies for the last EUS round to the first PLFS one. The particular details are on [pages 6 to 10 of the report](/Support/Country%20Survey%20Details/IND/EUS/utilities/AR_PLFS_2017.pdf).
+The report on the first PLFS from 2017 compares the sampling methodologies for the last EUS round to the first PLFS one. The particular details are on [pages 6 to 10 of the report](utilities/AR_PLFS_2017.pdf).
 
 ### Coding of industry and occupation codes
 
