--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -15,15 +15,15 @@ The PLFS is the follow up labour force survey to the Employment and Unemployment
 
 The PLFS covers household characteristics, individual demographic and education characteristics of respondents, as well as labour market information both over the past 12 months and over the 7 days prior to interview. The below table shows the survey years harmonized and the size of the sample in terms of households and individuals.
 
-| Year	| # of Households	| # of Individuals	|
-| :------:	| :-------:		| :-------:	 	|
-| 2017	| 102,113		| 433,339		|
-| 2018	| 101,579		| 420,757		|
-| 2019	| 100,408		| 418,297		|
+| Year	    | # of Households	| # of Individuals	|
+| :------:	| :-------:		    | :-------:	 	    |
+| 2017	    | 102,113		    | 433,339	    	|
+| 2018	    | 101,579		    | 420,757		    |
+| 2019	    | 100,408		    | 418,297		    |
 
 ## Where can the data be found?
 
-The data can be downloaded freely from the [Download Tables Data section]( https://mospi.gov.in/web/mospi/download-tables-data) on the MOSPI website. In particular from the README files [for 2018/19](https://mospi.gov.in/documents/213904/531813//README_demo1608274556988.pdf/2281ebcd-eb19-1468-dce0-23a6ea3a7b02) and [for 2019/20](https://mospi.gov.in/documents/213904/1216623//READMEM1627035725633.pdf/77c18981-9c85-a04a-3a35-af31ce8ce685) as well as from the National Data Archive [for 2017/18](http://microdata.gov.in/nada43/index.php/catalog/146).
+The data can be downloaded freely from the [Download Tables Data section](https://mospi.gov.in/web/mospi/download-tables-data) on the MOSPI website. In particular from the README files [for 2018/19](https://mospi.gov.in/documents/213904/531813//README_demo1608274556988.pdf/2281ebcd-eb19-1468-dce0-23a6ea3a7b02) and [for 2019/20](https://mospi.gov.in/documents/213904/1216623//READMEM1627035725633.pdf/77c18981-9c85-a04a-3a35-af31ce8ce685) as well as from the National Data Archive [for 2017/18](http://microdata.gov.in/nada43/index.php/catalog/146).
 
 ## What is the sampling procedure?
 
@@ -49,19 +49,19 @@ The PLFS was preceded by the Employment and Unemployment Survey (EUS) covering t
 
 The main difference, however, lies in the stratification at the second stage. While EUS stratified households by relative income, PLFS stratifies them by the “*number of members in the households having level of general education as secondary (10th standard) or above*”.
 
-The report on the first PLFS from 2017 compares the sampling methodologies for the last EUS round to the first PLFS one. The particular details are on [pages 6 to 10 of the report](/Support/Country%20Survey%20Details/IND/EUS/utilities/AR_PLFS_2017.pdf).
+The report on the first PLFS from 2017 compares the sampling methodologies for the last EUS round to the first PLFS one. The particular details are on [pages 6 to 10 of the report](utilities/AR_PLFS_2017.pdf).
 
 ### Coding of industry and occupation codes
 
 The PLFS data is coded using NIC-2008 codes for industry and NCO-2004 codes for occupation. NIC-2008 codes are five-digit codes whose first four are equivalent with ISIC-4 and the last one is used, wherever necessary to adapt to the Indian context. Hence no correspondence tables are necessary to translate the information to ISIC-4.
-NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](/Support/Country%20Survey%20Details/IND/PLFS/utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](/Support/Country%20Survey%20Details/IND/PLFS/utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
+NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
 
-The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](/Support/Country%20Survey%20Details/IND/PLFS/utilities/occupation_correspondences.xlsx). [This R code](/Support/Country%20Survey%20Details/IND/PLFS/utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](/Support/Country%20Survey%20Details/IND/PLFS/utilities/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
+The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](utilities/occupation_correspondences.xlsx). [This R code](utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](utilities/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
 Text
 
 ### Changes in states over time
 
-In the intervening years between the last EUS survey in 2011 and the first PLFS the state of Telangana was [formed out of districts previously part of Andhra Pradesh](https://en.wikipedia.org/wiki/Andhra_Pradesh_Reorganisation_Act,_2014). The states codes for the PLFS from 2017 to 2019 are consistent and the coding is equal with the [coding used in the EUS from 2004 to 2011](/Support/Country%20Survey%20Details/IND/EUS/Changes_States_And_State_Codes_Over_Time.md) with the addition of code 36 for Telangana.
+In the intervening years between the last EUS survey in 2011 and the first PLFS the state of Telangana was [formed out of districts previously part of Andhra Pradesh](https://en.wikipedia.org/wiki/Andhra_Pradesh_Reorganisation_Act,_2014). The states codes for the PLFS from 2017 to 2019 are consistent and the coding is equal with the [coding used in the EUS from 2004 to 2011](/Support/B%20-%20Country%20Survey%20Details/IND/EUS/Changes_States_And_State_Codes_Over_Time.md) with the addition of code 36 for Telangana.
 
 ### Definitions of employment over recall periods
 
@@ -76,10 +76,10 @@ The details of these definitions are [covered separately in another document](De
 
 The seven-day recall section 6 (see screenshot below) has two instances to record earnings. Column 9 of questions 3.1 through 3.7 asks for daily earnings for those with codes 41,42, and 51, while question 9 asks for the preceding month’s earnings for those with codes 31, 71, or 72. Finally, for those with codes 11, 12, 21, 61, and 62, the interviewees are asked to report their gross earnings over the previous 30 days.
 
-![Screenshot of questionnaire](/Support/Country%20Survey%20Details/IND/PLFS/utilities/earnings_questions.PNG)
+![Screenshot of questionnaire](utilities/earnings_questions.PNG)
 
 Code 11 stands for the self-employed, while code 12 represents employers. Codes 61 and 62 represent family helpers in a business. For them we have the earnings for the past 30 days. The monthly wage is only collected for those in wage employment over the past week (code 31) or waged workers off in that week due to sickness (code 71) or other reasons (code 72).
 
-The annual report (see [here the report for the 2019/20 PLFS](/Support/Country%20Survey%20Details/IND/EUS/utilities/Annual_Report_PLFS_2019_20.pdf)) documents these earnings in separate tables. In addition, the daily earnings can be summarized to a weekly wage for casual wage workers in public works other than MGNREG (Mahatma Gandhi National Rural Employment Guarantee Act) (code 41), casual workers in MGNREG works (code 42), or in other types of works.
+The annual report (see [here the report for the 2019/20 PLFS](utilities/Annual_Report_PLFS_2019_20.pdf)) documents these earnings in separate tables. In addition, the daily earnings can be summarized to a weekly wage for casual wage workers in public works other than MGNREG (Mahatma Gandhi National Rural Employment Guarantee Act) (code 41), casual workers in MGNREG works (code 42), or in other types of works.
 
 These wages are reported only as daily wages. It seems safe to summarise this into a weekly wage, but the Indian Authorities do not try to compare the two by for example dividing monthly earnings by 4.3. Hence attention should be given to extracting the correct information from the survey when calculating wages. Annualising casual workers earnings to a month or a year will likely result in an overestimate of their income.
