--- a/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -147,5 +147,8 @@ The table below provides an overview of the different versions underlying the su
 | 2019			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2020			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
 
+## Relevant information from INEGI on the ISIC codes used by ENOE
+
+Please check the following [document](https://github.com/worldbank/gld/blob/1ff9697fbfe571a1b95c6d10c4f8ce5e0d6a7568/Support/B%20-%20Country%20Survey%20Details/MEX/ENOE/utilities/Comentario%20aplicado%20a%20la%20versi%C3%B3n%202(spa-eng).pdf) to get more insight on the ENOE SCIAN codes and the meaning of the digits used in the raw data. 
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
