New hh and id table

--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -14,26 +14,23 @@ The CASEN is a chilean household surevey that contains sections for employment, 
 
 ## What does the CHL CASEN cover?
 
-The CHL CASEN covers a labour section that  collects information on employment situations of individuals surveyed. It further provides insights in the reasons for taking or not taking a job and the salary situation of the participant. In addition, other sections of CASEN cover demographic details (age, sex, location), education (academic), social security, labour market activities over the past week, as well as working hours and type of economic activities engaged. The years and sample size of CASEN harmonized for GLD are:
+The CHL CASEN includes one labour section that collects information on employment situations of individuals surveyed. It further provides insights in the reasons for taking or not taking a job and the salary situation of the participant. In addition, other sections of CASEN cover demographic details (age, sex, location), education (academic), social security, labour market activities over the past week, as well as working hours and type of economic activities engaged. The years and sample size of CASEN harmonized for GLD are:
 
 | Year	| # of Households	| # of Individuals	|
 | :-------	| :--------		| :--------	 	|
-| 2005	| 100,776	| 402,186	|
-| 2006	| 104,857	| 411,737	|
-| 2007	| 105,567	| 410,185	|
-| 2008	| 104,113	| 402,253	|
-| 2009	| 102,068	| 392,497	|
-| 2010	| 102,489	| 392,674	|
-| 2011	| 102,588	| 389,038	|
-| 2012	| 102,963	| 388,114	|
-| 2013	| 101,382	| 379,010	|
-| 2014	| 103,998	| 389,926	|
-| 2015	| 105,628	| 390,565	|
-| 2016	| 104,809	| 383,381	|
-| 2017	| 104,558	| 377,929 |
-| 2018	| 104,348	| 375,481 |
-| 2019	| 109,335	| 390,018 |
-| 2020	| 113,634	| 400,971 |
+| 1990	| ?         | ?     	|
+| 1992	| 35,948	| 143,459	|
+| 1994	| 45,379	| 178,057	|
+| 1996	| 33,636	| 134,262	|
+| 1998	| 48,107	| 188,360	|
+| 2000	| 65,036	| 252,748	|
+| 2003	| 68,153	| 257,077	|
+| 2006	|     |    |
+| 2009	| 71,460    | 246,924 	|
+| 2011	| ?         | ?         |
+| 2013	| 66,725    | 218,491   |
+| 2015	| 83,887    | 266,968   |
+| 2017	| 70,948    | 216,439	|
 
 ## Where can the data be found?
 
