--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -10,7 +10,7 @@ Introduction to the CHILEAN HOUSEHOLD SURVEY (Labour section) (CASEN)
 
 ## What is the CHL CASEN?
 
-The CASEN is a chilean household surevey that contains sections for employment, education, dwelling and income. The CASEN has been rolling since the eighties until today, yet the GLD project harmonized surveys between 1992 and 2017.  
+The CASEN is a chilean household surevey that contains sections for employment, education, dwelling and income. The CASEN has been rolling since 1987 until 2017, yet the GLD project harmonized surveys between 1992 and 2017.  
 
 ## What does the CHL CASEN cover?
 
@@ -25,124 +25,44 @@ The CHL CASEN includes one labour section that collects information on employmen
 | 1998	| 48,107	| 188,360	|
 | 2000	| 65,036	| 252,748	|
 | 2003	| 68,153	| 257,077	|
-| 2006	|     |    |
+| 2006	| 73,720    | 268,873   |
 | 2009	| 71,460    | 246,924 	|
 | 2011	| ?         | ?         |
 | 2013	| 66,725    | 218,491   |
 | 2015	| 83,887    | 266,968   |
 | 2017	| 70,948    | 216,439	|
 
+Note : 1990 was originally part of the harmonized files
+
 ## Where can the data be found?
 
-The microdata is free and publicly available on the National Institute of Statistics and Geography (INEGI). INEGI created a [dedicated website](https://www.inegi.org.mx/programas/enoe/15ymas/#Microdatos) that records ENOE and all previous versions, besides it contains complete information to understand the framework of the ENOE. Data from 2019 onwards can only be circulated within the World Bank. For further information kindly get in touch with the World Bank Jobs Group. 
+The microdata is free and publicly available on the Ministry of Social Development website. The ministry created a [dedicated website](http://observatorio.ministeriodesarrollosocial.gob.cl/encuesta-casen) that records the results from CASEN, besides it contains complete information to understand the framework of the CASEN. For further information kindly get in touch with the World Bank Jobs Group. 
 
 ## What is the sampling procedure?
 
-The ENOE uses a stratified two-stage design. The introductory section of ENOE provides ample detail on the breakdown and goals of the process. Below we share a sequence of images that will allow the user to access the information in the ENOE webpage. The text is in Spanish. Yet, we did a short summary in english at the bottom of this section to give the user a general idea of the information.  
+The ENOE uses a stratified two-stage design. The introductory section of documents from CASEN provides details on the breakdown and goals of the process. The text is in Spanish. Yet, we did a short summary in english to give the user a general idea of the information.  
+
+| Year	|  Description |
+| :-------	| :--------		| 
+| 1990 - 1994| stratified and random  | 
+| 1996 | stratified (geographic with limited stratum), probabilistic, by conglomarates  | 
+| 1998 | stratified, probabilistic, by conglomarates,  |
+| 2000-2003 | The type of sampling is stratified, by conglomerates and multistage. In each stratum, an independent sample was obtained to represent it, and the set of all of them represents the country.|
+| 2006-2009 |the type of sampling is stratified, by compact conglomerates (housing block) and multi-stage.|
+| 2011-2017 | probabilistic sample, stratified geographically and by population size, both in urban and rural areas. The selection of the sample is carried out in two or three stages in urban and rural areas.|
 
 
-Image 1. Steps to find the information in the webpage
-<br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro.png)
-<br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro2.png)
-<br></br>
-<br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro3.png)
-<br></br>
-Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
-
-
-[Summarized Translation from the original version]
-
-    The sampling is probabilistic, two-stage, stratified by conglomerates.
-
-    Observation unit: The House.
-    Sampling unit: The private home.
-    Analysis unit: The home and the residents of the dwelling. [...]
-
-    Sampling frame : The sampling frame used for the ENOE is INEGI's 2012 National Housing Framework, built from the cartographic and demographic information obtained during the 2010 Population and Housing Census, which is updated with each new census survey. [...]
+Source: 1990-2017 Sampling Design Documentation from the Social Observatory [CASEN]( http://observatorio.ministeriodesarrollosocial.gob.cl/encuesta-casen-2017)
 
 ## What is the geographic significance level?
 
-The results are at national, state, and *cities of interest* levels as well as for certain size categories of localities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2019 ENOE can be found under section 3.3 (page 39/40) of [that year's report](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613).
+The results are at national, rural, urban, regional, and *cities of interest* levels as well as selected communities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2017 CASEN can be found under section I1.4 (page 10/191) of [that year's report](http://observatorio.ministeriodesarrollosocial.gob.cl/storage/docs/casen/2017/Diseno_Muestral_Casen_2017_MDS.pdf#page10).
 
 ## Other Noteworthy Aspects 
 
-### Evolution of the ENOE questionnaires
-
-In the past fifteen years, the Mexican national statistics institute
-(INEGI) published five updates (Table 1) of the labor force questionnaire or
-ENOE. The ENOE has two versions: the extended version and the basic
-version. Every quarter, the INEGI conducts labor surveys using either
-version.
-
-Figure 1. Type of questionnaire used in ENOE
-<br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOEversions.png)
-<br></br>
-Note.- Image taken from ["Conociendo la base de datos de la ENOE"](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/con_basedatos_proy2010.pdf) by INEGI
-
-Table 1. ENOE questionnaire revision by year
-
-| Year         | Version Q1                                                                                            |
-| ------------ | ----------------------------------------------------------------------------------------------------- |
-| 2005 to 2006 | [First Extended Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_amp_v1.pdf)  |
-| 2007         | [First Basic Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_bas_v1.pdf)     |
-| 2008         | [Second Basic Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_bas_v2.pdf)    |
-| 2009         | [Second Extended Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_amp_v2.pdf) |
-| 2010 to 2012 | [Third Extended Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_amp_v3.pdf)  |
-| 2013 to 2015 | [Fourth Extended Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_amp_v4.pdf) |
-| 2016 to 2020 | [Fifth Extended Version](https://www.inegi.org.mx/contenidos/programas/enoe/15ymas/doc/c_amp_v5.pdf)  |
-
-— [Author made. based on ENOE
-Questionnaires](https://www.inegi.org.mx/programas/enoe/15ymas/)
-
 ### Information used in the GLD harmonization
 
-Since ENOE reports quarterly results using different questionnaires, the 
-harmonization team choose between annualizing quarterly results or choosing 
-one quarter with mostly similar questionnaire questions. The fact that there 
-is no unique questionnaire for the entire year introduces seasonality in 
-the input, which could impact the process of data analysis for the user.
-
-Annualizing data means that the results from extended and basic version 
-questionnaires would merge which may cause lose of information. In table 2. 
-the team summarized the list of absent topics in the extended and 
-the basic questionnaire versions.
-
-| Extended Version                                                                               | Basic Version                                                                                                                    |
-| ---------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
-| Questions about situation after losing a job and the length of unemployment or job inactivity. | Questions about migration and additional labor opportunities (second job).                                                       |
-|                                                                                                | Questions on financial, social and economic support such as syndicate enrollment, public social welfare benefits, and insurance. |
-
 ### Coding of industry and occupation codes
-
-The ENOE codes occupation based on the "Mexican Classification of Occupations" (Clasificación Mexicana de Ocupaciones - CMO) from 2005 to 2012 and from 2013 to 2020 on the "National System of Classification of Occupations" (Sistema Nacional de Clasificación de Ocupaciones - SINCO). These are mapped to ISCO-08. 
-
-On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2002, 2007, 2013, and 2018 versions. The first is mapped to ISIC-3.1, while the others are mapped to ISIC-4. 
-
-The table below provides an overview of the different versions underlying the survey as well as what version they have been mapped to. The precise details of how the mapping was done is covered [here in a separate document on occupations](Correspondence_occup_ISCO.md) as well as [here on industry classification](Correspondence_NAICS_ISIC.md).
-
-
-| Year of survey	| National occup version	| ISCO version	| National industry version	| ISIC version	|
-| :----:		| :----:			| :----:	| :----:			| :----:	|
-| 2005			| CMO 				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
-| 2006			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
-| 2007			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
-| 2008			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2009			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2010			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2011			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2012			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2013			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2014			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2015			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2016			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2017			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2018			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2019			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
-| 2020			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
 
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
