--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -18,7 +18,6 @@ The CHL CASEN includes one labour section that collects information on employmen
 
 | Year	| # of Households	| # of Individuals	|
 | :-------	| :--------		| :--------	 	|
-| 1990	| ?         | ?     	|
 | 1992	| 35,948	| 143,459	|
 | 1994	| 45,379	| 178,057	|
 | 1996	| 33,636	| 134,262	|
@@ -27,12 +26,10 @@ The CHL CASEN includes one labour section that collects information on employmen
 | 2003	| 68,153	| 257,077	|
 | 2006	| 73,720    | 268,873   |
 | 2009	| 71,460    | 246,924 	|
-| 2011	| ?         | ?         |
+| 2011	| 86,854    | 294,791   |
 | 2013	| 66,725    | 218,491   |
 | 2015	| 83,887    | 266,968   |
-| 2017	| 70,948    | 216,439	|
-
-Note : 1990 was originally part of the harmonized files
+| 2017	| 70,948    | 216,439	  |
 
 ## Where can the data be found?
 
@@ -51,7 +48,6 @@ The ENOE uses a stratified two-stage design. The introductory section of documen
 | 2006-2009 |the type of sampling is stratified, by compact conglomerates (housing block) and multi-stage.|
 | 2011-2017 | probabilistic sample, stratified geographically and by population size, both in urban and rural areas. The selection of the sample is carried out in two or three stages in urban and rural areas.|
 
-
 Source: 1990-2017 Sampling Design Documentation from the Social Observatory [CASEN]( http://observatorio.ministeriodesarrollosocial.gob.cl/encuesta-casen-2017)
 
 ## What is the geographic significance level?
@@ -60,9 +56,10 @@ The results are at national, rural, urban, regional, and *cities of interest* le
 
 ## Other Noteworthy Aspects 
 
-### Information used in the GLD harmonization
+### 2011 survey
+The methodology and variable information for the year 2011 is limited compared to other years. In 2011 the INE jointly with the Ministry of Social Development changed the design of the survey. Yet, the output does not provide a clear number of households and individuals surveyed as such the numbers we report are those in the raw dataset but they could be different to the offcial numbers for that year.
 
-### Coding of industry and occupation codes
-
+### geographic breakdown
+The chilean CASEN uses geographic stratification for the sampling of the survey. In the surveys the highest location level is region, oftentimes labelled with numbers and/or names, the second level is provinces and the third level communities. All years have information for the three levels, yet,  the information for communities is limited and variable every survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, communities was the second level of details for the surveys and no province informaition available in the raw files. Furthermore, the user should be careful in assuming that there has been geographic changes between survey years if there is athe absence of a province in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guranteeing consistency at the regional (1st) level.
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
