--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -41,9 +41,9 @@ The ENOE uses a stratified two-stage design. The introductory section of documen
 
 | Year	|  Description |
 | :-------	| :--------		| 
-| 1990 - 1994| stratified and random  | 
-| 1996 | stratified (geographic with limited stratum), probabilistic, by conglomarates  | 
-| 1998 | stratified, probabilistic, by conglomarates,  |
+| 1990 - 1994| stratified and random. | 
+| 1996 | stratified (geographic with limited stratum), probabilistic, by conglomarates. | 
+| 1998 | stratified, probabilistic, by conglomarates.  |
 | 2000-2003 | The type of sampling is stratified, by conglomerates and multistage. In each stratum, an independent sample was obtained to represent it, and the set of all of them represents the country.|
 | 2006-2009 |the type of sampling is stratified, by compact conglomerates (housing block) and multi-stage.|
 | 2011-2017 | probabilistic sample, stratified geographically and by population size, both in urban and rural areas. The selection of the sample is carried out in two or three stages in urban and rural areas.|
