--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -60,7 +60,18 @@ The results are at national, rural, urban, regional, and *cities of interest* le
 ### 2011 survey
 The methodology and variable information for the year 2011 is limited compared to other years. In 2011 the INE jointly with the Ministry of Social Development changed the design of the survey. Yet, the output does not provide a clear number of households and individuals surveyed as such the numbers we report are those in the raw dataset but they could be different to the offcial numbers for that year.
 
-### geographic breakdown
+### Geographic breakdown
 The chilean CASEN uses geographic stratification for the sampling of the survey. In the surveys the highest location level is region, oftentimes labelled with numbers and/or names, the second level is provinces and the third level communities. All years have information for the three levels, yet,  the information for communities is limited and variable every survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, communities was the second level of details for the surveys and no province informaition available in the raw files. Furthermore, the user should be careful in assuming that there has been geographic changes between survey years if there is athe absence of a province in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guranteeing consistency at the regional (1st) level.
+
+### Peculiarities of ISCO
+
+Click here for a dedicated page on things to keep in mind while using occupation information from CASEN. 
+
+### Peculiarities of ISIC
+
+Click here for a dedicated page on things to keep in mind while using industry information from CASEN. 
+
+### Who manages CASEN
+It is important to note that though the INE is the manager of the survey design and implementation, CASEN is under the responsibility of the Ministry of Social Development and decisions on methodology and changes are handled by the ministry. 
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
