--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -65,7 +65,7 @@ The chilean CASEN uses geographic stratification for the sampling of the survey.
 
 ### Peculiarities of ISCO
 
-Click here for a dedicated page on things to keep in mind while using occupation information from CASEN. 
+Click [here](https://github.com/worldbank/gld/blob/c9bc90f4eec5222eaa2d9793187aa12a67778480/Support/Country%20Survey%20Details/CHL/CASEN/isco%20information.md) for a dedicated page on things to keep in mind while using occupation information from CASEN. 
 
 ### Peculiarities of ISIC
 
