--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -69,7 +69,7 @@ Click [here](https://github.com/worldbank/gld/blob/c9bc90f4eec5222eaa2d9793187aa
 
 ### Peculiarities of ISIC
 
-Click here for a dedicated page on things to keep in mind while using industry information from CASEN. 
+Click [here](https://github.com/worldbank/gld/blob/f0d1b72acb925746c93c4ae5d62b045ac72abdbf/Support/Country%20Survey%20Details/CHL/CASEN/isic%20information.md) for a dedicated page on things to keep in mind while using industry information from CASEN. 
 
 ### Who manages CASEN
 It is important to note that though the INE is the manager of the survey design and implementation, CASEN is under the responsibility of the Ministry of Social Development and decisions on methodology and changes are handled by the ministry. 
