Changes to sampling procedure text, small typos

--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -10,27 +10,27 @@ Introduction to the CHILEAN HOUSEHOLD SURVEY (Labour section) (CASEN)
 
 ## What is the CHL CASEN?
 
-The CASEN is a chilean household surevey that contains sections for employment, education, dwelling and income. The CASEN has been rolling since 1987 until 2017, yet the GLD project harmonized surveys between 1992 and 2017.  
+The Encuesta de **Ca**racterización **S**ocio**e**conomica **N**acional (CASEN - National Socioeconomic Characterisation Survey) is a Chilean household survey that contains sections for employment, education, dwellinga and income. The CASEN has been rolling since 1987. The GLD harmonization starts with 1990 a this is the first year wth public data (see section on where the data can be found below).  
 
 ## What does the CHL CASEN cover?
 
 The CHL CASEN includes one labour section that collects information on employment situations of individuals surveyed. It further provides insights in the reasons for taking or not taking a job and the salary situation of the participant. In addition, other sections of CASEN cover demographic details (age, sex, location), education (academic), social security, labour market activities over the past week, as well as working hours and type of economic activities engaged. The years and sample size of CASEN harmonized for GLD are:
 
-| Year	| # of Households	| # of Individuals	|
-| :-------	| :--------		| :--------	 	|
-| 1990	| 25,793	| 105,189	|
-| 1992	| 35,948	| 143,459	|
-| 1994	| 45,379	| 178,057	|
-| 1996	| 33,636	| 134,262	|
-| 1998	| 48,107	| 188,360	|
-| 2000	| 65,036	| 252,748	|
-| 2003	| 68,153	| 257,077	|
-| 2006	| 73,720    | 268,873   |
-| 2009	| 71,460    | 246,924 	|
-| 2011	| 86,854    | 294,791   |
-| 2013	| 66,725    | 218,491   |
-| 2015	| 83,887    | 266,968   |
-| 2017	| 70,948    | 216,439	  |
+| Year	    | # of Households	| # of Individuals	|
+| :-------	| :--------		    | :--------	 	      |
+| 1990	    | 25,793	        | 105,189	          |
+| 1992	    | 35,948	        | 143,459	          |
+| 1994	    | 45,379	        | 178,057	          |
+| 1996	    | 33,636	        | 134,262	          |
+| 1998	    | 48,107	        | 188,360	          |
+| 2000	    | 65,036	        | 252,748	          |
+| 2003	    | 68,153	        | 257,077	          |
+| 2006	    | 73,720          | 268,873           |
+| 2009	    | 71,460          | 246,924 	        |
+| 2011	    | 86,854          | 294,791           |
+| 2013	    | 66,725          | 218,491           |
+| 2015	    | 83,887          | 266,968           |
+| 2017	    | 70,948          | 216,439	          |
 
 ## Where can the data be found?
 
@@ -38,30 +38,27 @@ The microdata is free and publicly available on the Ministry of Social Developme
 
 ## What is the sampling procedure?
 
-The ENOE uses a stratified two-stage design. The introductory section of documents from CASEN provides details on the breakdown and goals of the process. The text is in Spanish. Yet, we did a short summary in english to give the user a general idea of the information.  
+The CASEN uses a stratified two-stage design. In the first stage the primary sampling units (blocks in urban areas and "sections" in rural areas) are stratified and then selected with probability proportional to size. The second stage selects households in the primary sampling units with equal probability. the methodology may change slightly from year to year and users are advised to read the individual documents [here on the website](observatorio.ministeriodesarrollosocial.gob.cl/encuesta-casen-2017).
 
-| Year	|  Description |
-| :-------	| :--------		| 
-| 1990 - 1994| stratified and random. | 
-| 1996 | stratified (geographic with limited stratum), probabilistic, by conglomarates. | 
-| 1998 | stratified, probabilistic, by conglomarates.  |
-| 2000-2003 | The type of sampling is stratified, by conglomerates and multistage. In each stratum, an independent sample was obtained to represent it, and the set of all of them represents the country.|
-| 2006-2009 |the type of sampling is stratified, by compact conglomerates (housing block) and multi-stage.|
-| 2011-2017 | probabilistic sample, stratified geographically and by population size, both in urban and rural areas. The selection of the sample is carried out in two or three stages in urban and rural areas.|
+The website looks (as of April 2022) like the screenshot shown below. To find the documentation click on the methodology tab (red box) ensuring to be in the right year (green box). The document for 2017 is shown in the black box.
 
-Source: 1990-2017 Sampling Design Documentation from the Social Observatory [CASEN]( http://observatorio.ministeriodesarrollosocial.gob.cl/encuesta-casen-2017)
+<br></br>
+![CASEN where find methodology](utilities/Casen_donde_metodologia.png)
+<br></br>
 
 ## What is the geographic significance level?
 
-The results are at national, rural, urban, regional, and *cities of interest* levels as well as selected communities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2017 CASEN can be found under section I1.4 (page 10/191) of [that year's report](http://observatorio.ministeriodesarrollosocial.gob.cl/storage/docs/casen/2017/Diseno_Muestral_Casen_2017_MDS.pdf#page10).
+The results are significant at national, rural, urban, regional, and *cities of interest* levels as well as selected communities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports, as describe in the previous section
 
 ## Other Noteworthy Aspects 
 
 ### 2011 survey
-The methodology and variable information for the year 2011 is limited compared to other years. In 2011 the INE jointly with the Ministry of Social Development changed the design of the survey. Yet, the output does not provide a clear number of households and individuals surveyed as such the numbers we report are those in the raw dataset but they could be different to the offcial numbers for that year.
+The methodology and variable information for the year 2011 is limited compared to other years. In 2011 the Instituto Nacional de Estadística (INE - National Statistics Institute) jointly with the Ministry of Social Development changed the design of the survey. Yet, the output does not provide a clear number of households and individuals surveyed as such the numbers we report are those in the raw dataset but they could be different to the offcial numbers for that year.
 
 ### Geographic breakdown
-The chilean CASEN uses geographic stratification for the sampling of the survey. In the surveys the highest location level is region, oftentimes labelled with numbers and/or names, the second level is provinces and the third level communities. All years have information for the three levels, yet,  the information for communities is limited and variable every survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, communities was the second level of details for the surveys and no province informaition available in the raw files. Furthermore, the user should be careful in assuming that there has been geographic changes between survey years if there is athe absence of a province in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guranteeing consistency at the regional (1st) level.
+The Chilean CASEN uses geographic stratification for the sampling of the survey. In the surveys the first (largest) subdivision level is the region, oftentimes labelled with numbers and/or names (e.g., Region II or Region X). The second level is the province and the third level are the communities. 
+
+All years have information for the three levels, yet the information for communities is limited and variable across survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, there communities was the second level of details for the surveys and no province information available in the raw files. Furthermore, the user should be careful in assuming that there have been geographic changes between survey years if there a province is absent in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guaranteeing consistency at the regional (1st) level.
 
 ### Peculiarities of ISCO
 
