added icls info

--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -60,6 +60,9 @@ The Chilean CASEN uses geographic stratification for the sampling of the survey.
 
 All years have information for the three levels, yet the information for communities is limited and variable across survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, there communities was the second level of details for the surveys and no province information available in the raw files. Furthermore, the user should be careful in assuming that there have been geographic changes between survey years if there a province is absent in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guaranteeing consistency at the regional (1st) level.
 
+### ICLS Changes
+The labour section follows the ICLS-13 and ICLS-19 question designs and uses the ISCO accepted classification for most of the years.
+
 ### Peculiarities of ISCO
 
 Click [here](https://github.com/worldbank/gld/blob/c9bc90f4eec5222eaa2d9793187aa12a67778480/Support/Country%20Survey%20Details/CHL/CASEN/isco%20information.md) for a dedicated page on things to keep in mind while using occupation information from CASEN. 
