--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -61,9 +61,17 @@ The Chilean CASEN uses geographic stratification for the sampling of the survey.
 All years have information for the three levels, yet the information for communities is limited and variable across survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, there communities was the second level of details for the surveys and no province information available in the raw files. Furthermore, the user should be careful in assuming that there have been geographic changes between survey years if there a province is absent in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guaranteeing consistency at the regional (1st) level.
 
 ### ICLS Changes
-Labour surveys or chapters in household surveys follow an international guidance that changes periodically in the Internaticonal Labour Statistics Conferences, to know more about this please visit this website. In the case of the Chilean CASEN the labour section follows the ICLS-13 and ICLS-19 question designs and uses the ISCO accepted classification for most of the years. The difference between both is about the activities performed by independent workers, in the ICLS-13 independent workers are classified in self-work activities while in the ICLS-19 their activities is broken down into other economic activities such as agriculture or commerce. 
+Labour surveys or labour chapters in household surveys follow the versions published after the International Labour Statistics Conferences agree on a significant change in labour statistics definitions; visit this website to learn more.  In the CASEN, the NSO used the ICLS-13 definition until 2009 and the ICLS-19 from 2011 onwards. The main difference is in the economic activity definition to classify independent workers. The ICLS-13 type of question focus on independent workers' economic activities classified into one economic activity, self-work. The ICLS-19, survey questions focus on grouping activities of independent workers in subgroups such as independent work in agriculture or commerce (See xx below for an example of each ICLS).
 
-XXX images.
+ICLS-13 Question type
+<br></br>
+![icls-13](https://github.com/worldbank/gld/blob/30f3d5b9ecbab45965da949f01c07336209c7ee6/Support/Country%20Survey%20Details/CHL/CASEN/utilities/1-icls.PNG)
+<br></br>
+
+ICLS-19 Question type
+<br></br>
+![icls-19](https://github.com/worldbank/gld/blob/30f3d5b9ecbab45965da949f01c07336209c7ee6/Support/Country%20Survey%20Details/CHL/CASEN/utilities/2-icls.PNG)
+<br></br>
 
 ### Peculiarities of ISCO
 
