--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -53,12 +53,11 @@ The results are significant at national, rural, urban, regional, and *cities of 
 ## Other Noteworthy Aspects 
 
 ### 2011 survey
-The methodology and variable information for the year 2011 is limited compared to other years. In 2011 the Instituto Nacional de Estadística (INE - National Statistics Institute) jointly with the Ministry of Social Development changed the design of the survey. Yet, the output does not provide a clear number of households and individuals surveyed as such the numbers we report are those in the raw dataset but they could be different to the offcial numbers for that year.
+The methodology and information about variables on the raw dataset are limited compared to other years. In 2011, the National Statistics Institute (INE) and the Ministry of Social Development changed the survey design. As a result, the CASEN website only compiles details about the changes but does not present the information on the number of households or individuals surveyed. As a result, the GLD project harmonized the raw data but did not have the means to verify that the total households and individuals resemble the official source beyond the public database.
 
-### Geographic breakdown
-The Chilean CASEN uses geographic stratification for the sampling of the survey. In the surveys the first (largest) subdivision level is the region, oftentimes labelled with numbers and/or names (e.g., Region II or Region X). The second level is the province and the third level are the communities. 
+### Province Information
+Province information is coded under the variables subnatid2 for all years except 2011 and 2013 (information absent from the raw dataset). In addition, the codes are not consistent over time because the survey is not significant at the province level. In some instances, the code conferred to one province may change in the next because that year, the specific province was not considered by the sample design. Please, visit the CASEN methodology to learn more.
 
-All years have information for the three levels, yet the information for communities is limited and variable across survey year (please refer to the methodology handbook for further details), For instance, the years 2011 and 2013, there communities was the second level of details for the surveys and no province information available in the raw files. Furthermore, the user should be careful in assuming that there have been geographic changes between survey years if there a province is absent in the labelling, this is because information may be absent but the province in real life exists in the country. For this reason, the GLD team chose to provide information for the user up to the second level, guaranteeing consistency at the regional (1st) level.
 
 ### ICLS Changes
 Labour surveys or labour chapters in household surveys follow the versions published after the International Labour Statistics Conferences agree on a significant change in labour statistics definitions; visit this website to learn more.  In the CASEN, the NSO used the ICLS-13 definition until 2009 and the ICLS-19 from 2011 onwards. The main difference is in the economic activity definition to classify independent workers. The ICLS-13 type of question focus on independent workers' economic activities classified into one economic activity, self-work. The ICLS-19, survey questions focus on grouping activities of independent workers in subgroups such as independent work in agriculture or commerce (See xx below for an example of each ICLS).
@@ -82,6 +81,6 @@ Click [here](https://github.com/worldbank/gld/blob/c9bc90f4eec5222eaa2d9793187aa
 Click [here](https://github.com/worldbank/gld/blob/f0d1b72acb925746c93c4ae5d62b045ac72abdbf/Support/Country%20Survey%20Details/CHL/CASEN/isic%20information.md) for a dedicated page on things to keep in mind while using industry information from CASEN. 
 
 ### Who manages CASEN
-It is important to note that though the INE is the manager of the survey design and implementation, CASEN is under the responsibility of the Ministry of Social Development and decisions on methodology and changes are handled by the ministry. 
+It is important to note that though the INE is the manager of the survey design and implementation, CASEN is under the responsibility of the Ministry of Social Development. Thus, decisions on methodology and changes are handled by the ministry. 
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
