--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -60,7 +60,7 @@ Province information is coded under the variables subnatid2 for all years except
 
 
 ### ICLS Changes
-Labour surveys or labour chapters in household surveys follow the versions published after the International Labour Statistics Conferences agree on a significant change in labour statistics definitions; visit this website to learn more.  In the CASEN, the NSO used the ICLS-13 definition until 2009 and the ICLS-19 from 2011 onwards. The main difference is in the economic activity definition to classify independent workers. The ICLS-13 type of question focus on independent workers' economic activities classified into one economic activity, self-work. The ICLS-19, survey questions focus on grouping activities of independent workers in subgroups such as independent work in agriculture or commerce (See xx below for an example of each ICLS).
+Labour surveys or labour chapters in household surveys follow the versions published after the International Labour Statistics Conferences agree on a significant change in labour statistics definitions; visit this website to learn more.  In the CASEN, the NSO used the ICLS-13 definition until 2009 and the ICLS-19 from 2011 onwards. The main difference is in the economic activity definition to classify independent workers. The ICLS-13 type of question focus on independent workers' economic activities classified into one economic activity, self-work. The ICLS-19, survey questions focus on grouping activities of independent workers in subgroups such as independent work in agriculture or commerce.
 
 ICLS-13 Question type
 <br></br>
