Small change to 2011 group description

--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -48,12 +48,12 @@ The website looks (as of April 2022) like the screenshot shown below. To find th
 
 ## What is the geographic significance level?
 
-The results are significant at national, rural, urban, regional, and *cities of interest* levels as well as selected communities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports, as describe in the previous section
+The results are significant at national, rural, urban, regional, and *cities of interest* levels as well as selected communities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports, as described in the previous section.
 
 ## Other Noteworthy Aspects 
 
 ### 2011 survey
-The methodology and information about variables on the raw dataset are limited compared to other years. In 2011, the National Statistics Institute (INE) and the Ministry of Social Development changed the survey design. As a result, the CASEN website only compiles details about the changes but does not present the information on the number of households or individuals surveyed. As a result, the GLD project harmonized the raw data but did not have the means to verify that the total households and individuals resemble the official source beyond the public database.
+For 2011, information on methodology and variables in the raw data is limited compared to other years. Moreover, in 2011, the National Statistics Institute (INE) and the Ministry of Social Development changed the survey design. The CASEN website only compiles details about the changes but does not present the information on the number of households or individuals surveyed. As a result, the GLD project harmonized the dataset but could not have compare the results (e.g., sample counts, population LFP estimates) against official releases as in other years.
 
 ### Province Information
 Province information is coded under the variables subnatid2 for all years except 2011 and 2013 (information absent from the raw dataset). In addition, the codes are not consistent over time because the survey is not significant at the province level. In some instances, the code conferred to one province may change in the next because that year, the specific province was not considered by the sample design. Please, visit the CASEN methodology to learn more.
